syntax = "proto3";
option csharp_namespace = "Lachain.Proto";
option java_package = "com.latoken.proto";

message UInt160 {
    bytes buffer = 1;
}

message UInt256 {
    bytes buffer = 1;
}

message ECDSAPublicKey {
    bytes buffer = 1;
}

message ECDSAPrivateKey {
    bytes buffer = 1;
}

message Signature {
    bytes buffer = 1;
}